# FinMind

./: .claudeignore  .coveragerc  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  HistoryUpdate.md  Load.py  MANIFEST.in  Makefile  PLUGIN_ARCHITECTURE.md  Pipfile  README.md  Stock  VariableDocument.md  __init__.py  bar.html  dataset.md  demo.py  demo2.py  develop.py  genenv.py  kline.html  line.html  pie.html  pull_request.txt  pyproject.toml  requirements.txt  setup.py
.claude/: config.toml  settings.json  system.md
.claude/commands/: finmind.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml  test-wheel.yml
API/: CrudeOilPrices.py  EnergyFuturesPrices.py  ExchangeRate.py  FinancialStatements.py  GoldPrice.py  GovernmentBonds.py  InstitutionalInvestors.py  InterestRate.py  Load.py  README.md  StockDividend.py  StockInfo.py  StockPrice.py
API/doc/: Example.md  ExchangeRateList.md  Parameters.md  VariableIntroduction.md
BackTesting/: BAIS.py  BackTest.py  INSTITUTIONAL_INVESTORS_FOLLOWER.py  KD.py  KDCROSSOVER.py  MACDCROSSOVER.py  MACROSSOVER.py  MAXMINPERIODBAIS.py  README.md  SHORTSALE_MARGINPURCHASE_RATIO.py  __init__.py  demo.py  selenium.py  test.ipynb  test.py
Crawler/: BasedClass.py  GovernmentBonds.py  RawMaterialFuturesPrices.py  demo.py
Data/: BalanceSheet.py  BasedClass.py  CrudeOilPrices.py  CurrencyCirculation.py  DataSource.md  EnergyFuturesPrices.py  EuropeStockInfo.py  EuropeStockPrice.py  ExchangeRate.py  FinancialStatements.py  GoldPrice.py  GovernmentBonds.py  InstitutionalInvestors.py  InstitutionalInvestorsBuySell.py  InterestRate.py  JapanStockInfo.py  JapanStockPrice.py  Load.py  README.md  RawMaterialFuturesPrices.py  Shareholding.py  StockDividend.py  StockInfo.py  StockPrice.py  TaiwanStockFinancialStatements.py  TaiwanStockHoldingSharesPer.py  TaiwanStockInfo.py  TaiwanStockMarginPurchaseShortSale.py  TaiwanStockMonthRevenue.py  TaiwanStockPrice.py  TaiwanStockStockDividend.py  UKStockInfo.py  UKStockPrice.py  USStockInfo.py  USStockPrice.py
Data/doc/: Example.md
FinMind/: __init__.py  _version.py  config.py
FinMind/BackTestSystem/: BaseClass.py  __init__.py  utils.py
FinMind/BackTesting/: test.ipynb
FinMind/Crawler/: BasedClass.py  GovernmentBonds.py  RawMaterialFuturesPrices.py  __init__.py  demo.py
FinMind/Data/: Load.py
FinMind/Indicator/: bands.py  compare_with_talib.py  moving_average.py  statistic.py
FinMind/Schema/: output.py
FinMind/crawler/: __init__.py  base.py  commodities.py  demo.py  government_bonds.py
FinMind/data/: __init__.py  data_loader.py  data_subscriber.py  finmind_api.py
FinancialMining/: demo.py
Mining/: GRU_LSTM_demo.py  Mind.py  demo.py  readme.md
example/: Python document.md  R document.md  README.md  api_demo.py  api_demo.r  backtest.md  customer_dashboard_web_server.md  dashboard.ipynb  dashboard.py  demo.py  demo2.py  real_time_data_subscription.md  及時報價.ipynb
(+79 files in other folders)
