[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finmind"
description = "financial mining"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "linsam", email = "finmind.tw@gmail.com" },
]
keywords = ["financial", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
]
dynamic = ["version"]
dependencies = [
    "pandas>=1.1.5,<2.0.0",
    "numpy>=1.19.5,<2.0.0",
    "requests>=2.23.0,<3.0.0",
    "pydantic>=1.6.1,<2.0.0",
    "ta>=0.5.25,<0.6.0",
    "lxml>=4.6.3,<5.0.0",
    "pyecharts>=1.9.0,<2.0.0",
    "ipython>=7.16.1,<8.0.0",
    "loguru>=0.5.3,<1.0.0",
    "aiohttp>=3.7.4.post0,<4.0.0",
    "importlib-metadata>=4.8.1,<5.0.0",
    "Flask>=2.0.2,<3.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
    "tqdm",
    "nest-asyncio==1.6.0",
    "pyarrow",
    "exceptiongroup",
    "tomli",
    "async-timeout",
]

[project.urls]
documentation = "https://finmind.github.io/"
Source = "https://github.com/FinMind/FinMind"

[dependency-groups]
dev = [
    "pytest==6.2.5",
    "pytest-mock==3.6.1",
    "pytest-cov==3.0.0",
    "black==24.8.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
FinMind = ["templates/*.html"]
